--- a/projects/static/main.css
+++ b/projects/static/main.css
@@ -107,6 +107,15 @@ form {
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+#form2 textarea {
+  width: 100%;
+  height: 17rem;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  box-sizing: border-box;
+}
+
 input[type="text"] {
   width: calc(100% - 50px);
   /* Adjust width considering padding and border */
@@ -474,7 +483,7 @@ h1 {
   /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 50%;
   /* Could be more or less, depending on screen size */
 }
 
@@ -482,7 +491,7 @@ h1 {
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
 }
 
