--- a/static/main.css
+++ b/static/main.css
@@ -11,12 +11,21 @@ body {
   overflow-x: hidden;
 }
 
+.home-desc {
+  max-width: 800px;
+  margin: 0 auto;
+  color: #666;
+  text-align: center;
+  margin-top: 16px;
+}
+
 /* ! Topbar */
 
 .topbar {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
+  padding: 0rem 4rem;
 }
 
 .topbar .info {
@@ -41,52 +50,12 @@ body {
 
 /* ! Topbar */
 
-/*! LOGIN REGISTER BUTTONS */
-
-.button-container {
-  display: flex;
-  justify-content: space-evenly;
-  gap: 1.5rem;
-}
-
-.login-button button,
-.register-button button,
-.logout-button button {
-  font-size: 15px;
-  padding: 10px;
-  text-decoration: none;
-  color: #ffffff;
-  background-color: var(--navbarcolor);
-  border-radius: 4px;
-  transition: background-color 0 .3s, color 0.3s;
-  border: 2px solid #4CAF50;
-}
-
-.login-button button:hover,
-.register-button button:hover,
-.logout-button button:hover {
-  background-color: #3c8b3f;
-  border: 2px solid #3c8b3f;
-  color: white;
-}
-
-@media (max-width : 1250px) {
-
-  .login-button button,
-  .register-button button,
-  .logout-button button {
-    padding: 7px;
-    margin: 5px;
-  }
-}
-
-/*! LOGIN REGISTER BUTTONS */
 /* !Forms */
 .forms {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 0rem 20rem;
+  margin: 0rem 15rem;
 }
 
 .forms .box {
@@ -100,11 +69,20 @@ body {
 
 form {
   background-color: #fff;
-  max-width: 500px;
+  max-width: 80%;
   margin: 50px auto;
   padding: 30px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+#form2 textarea {
+  width: 100%;
+  height: 17rem;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 15px;
+  box-sizing: border-box;
 }
 
 input[type="text"] {
@@ -163,7 +141,7 @@ form textarea {
 }
 
 form textarea {
-  resize: vertical;
+  resize: none;
 }
 
 /* Submit button */
@@ -243,8 +221,20 @@ h1 {
   position: relative;
   top: 20px;
   margin-top: 40px;
-  font-size: 32px;
-  color: #239b27;
+  font-size: 42px;
+  color: #fdfefd;
+  text-shadow: 0px 0px 10px #072b3a;
+}
+
+.home-header {
+  color: #fdfefd;
+  text-shadow: 0px 0px 5px #072b3a, 0px 0px 10px #072b3a, 0px 0px 10px #072b3a,
+    0px 0px 20px #072b3a;
+}
+
+.quick-recommendation h1 {
+  margin-top: 10px;
+  font-size: 22px;
 }
 
 
@@ -283,23 +273,24 @@ h1 {
 
 }
 
-
-
 /* Container for recommendations */
 /* Container for book columns */
 #bookColumns {
-  display: flex;
+  display: none;
+  flex-wrap: wrap;
+  flex: 1 1 40;
   justify-content: space-between;
-  max-width: 1020px;
+  max-width: 90%;
   /* Adjusted to fit two 500px columns with some spacing */
   margin: 30px auto;
   padding: 20px;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 20px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Individual book columns */
+
 .book-column {
   flex: 1;
   display: flex;
@@ -308,6 +299,11 @@ h1 {
 }
 
 /* Style for each book */
+.book-info {
+  display: flex;
+  flex-direction: column;
+}
+
 .book {
   margin-bottom: 20px;
   padding: 15px;
@@ -315,6 +311,9 @@ h1 {
   border: 1px solid #ccc;
   border-radius: 4px;
   text-align: left;
+  border-radius: 30px;
+  display: flex;
+  gap: 1.5rem;
 }
 
 .book img {
@@ -331,7 +330,7 @@ h1 {
   font-weight: bold;
 }
 
-.book p {
+.book h3 {
   margin: 5px 0;
   color: #666;
   font-size: 14px;
@@ -381,6 +380,10 @@ h1 {
   /* Smooth transition for hover effect */
 }
 
+.readedbooktext {
+  font-size: 22px;
+
+ }
 .read-book:last-child {
   border-bottom: none;
   /* Remove border for the last item to clean up appearance */
@@ -474,7 +477,7 @@ h1 {
   /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  width: 50%;
   /* Could be more or less, depending on screen size */
 }
 
@@ -482,7 +485,7 @@ h1 {
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 40px;
   font-weight: bold;
 }
 
@@ -561,6 +564,7 @@ button {
 }
 
 .dropbtn {
+  width: 80%;
   background-color: #008cba;
   color: white;
   padding: 10px 20px;
@@ -619,4 +623,139 @@ button {
 /* Show the dropdown menu */
 .show {
   display: block;
+}
+
+
+@media (max-width : 1250px) {
+
+  .login-button button,
+  .register-button button,
+  .logout-button button {
+    padding: 7px;
+    margin: 5px;
+  }
+
+  .forms {
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 1rem;
+    margin: 1rem 2rem;
+  }
+
+  .forms .box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0rem;
+  }
+
+  form {
+    background-color: #fff;
+    max-width: 100%;
+  }
+
+
+}
+
+@media (max-width : 800px) {
+  .book {
+    gap: 1rem;
+    flex-direction: column;
+  }
+
+  .book img {
+    height: 80%;
+    width: auto;
+  }
+
+  .book h3 {
+    font-size: 14px;
+  }
+}
+
+@media (max-width : 666px) {
+  .quick-recommendation h1 {
+    font-size: 1rem;
+  }
+
+  .quick-recommendation p {
+    font-size: .8rem;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  label {
+    text-align: center;
+  }
+
+  .read-books-container {
+    max-width: 400px;
+    width: 90%;
+    margin: 20px auto;
+  }
+
+  .read-book h4 {
+    font-size: 12px;
+  }
+
+  .read-book p {
+    font-size: 12px;
+  }
+
+  input[type="text"] {
+    font-size: 12px;
+  }
+
+  .topbar .info i {
+    font-size: 1.5rem;
+  }
+
+}
+
+/* Cookie Consent Banner */
+#cookie-consent-banner {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: var(--navbarcolor);
+  color: white;
+  text-align: center;
+  padding: 15px;
+  display: none; /* Initially hidden */
+  z-index: 1000; /* Ensure it appears above other elements */
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+}
+
+#cookie-consent-banner button {
+  background-color: var(--maincolor);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  margin-left: 10px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+#cookie-consent-banner button:hover {
+  background-color: #3c8b3f;
+  transform: scale(1.05);
+}
+
+.popup-alert {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f8d7da;
+  color: #721c24;
+  padding: 20px;
+  border: 1px solid #f5c6cb;
+  border-radius: 5px;
+  z-index: 1000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  font-size: 16px;
 }
