--- a/templates/main.html
+++ b/templates/main.html
@@ -17,7 +17,7 @@
     <div class="topbar">
         <div class="logo">
             <a href="{% url 'projects' %}">
-                <img src="{% static 'imagies/logo.jpg' %}" alt="Logo">
+                <img src="{% static 'images/logo.jpg' %}" alt="Logo">
             </a>
         </div>
         <div class="info">
@@ -81,14 +81,11 @@
             </div>
             <div class="section3">
                 <div class="icons">
-                    <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#"><i class="fa-brands fa-discord"></i></a>
+                    
                 </div>
                 <div class="about">
-                    <p>Lorem isum dolor sit amet consectetur adipisicing elit. Cupiditate ad exercitationem quo possimus
-                        accusamus explicabo aliquid distinctio quibusdam nemo delectus porro, quis vitae nostrum
-                        reiciendis architecto neque provident, corporis commodi.</p>
+                    <p class="abouttext">This website was created by a first-year computer science student with a passion for books and artificial intelligence. Using OpenAI APIs, it helps users find their next read through personalized recommendations. Users can quickly gain information about books, leave comments, and save books to their personal lists. The "Surprise Me" feature provides tailored book suggestions based on a reading persona created by the site. To use this feature, upvote at least 5 books to generate your personalized reading profile. Enjoy exploring new books and discovering your next favorite read! Please note, this is a demo version of BookHalter.
+                    </p>
                 </div>
             </div>
             <div class="cr">
